# kobo-wifi-remote

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  askama.toml  build.sh  record-inputs.sh
.cargo/: config.toml
evemu/: Dockerfile  build.sh  cross-compile.sh
src/: actions.rs  cli.rs  config  config.rs  errors.rs  fbink.rs  init.rs  input.rs  lib.rs  main.rs  management.rs  screenshot.rs  server.rs  templates.rs  util.rs  wifiremote.sh
src/actions/: action.rs  arbitrary.rs  input.rs  mod.rs
src/frontend/: index.rs  mod.rs  templates.rs
src/frontend/html/: arbitrary-input.html  auto-turner.html  custom-actions.html  developer-settings.html  edit-config.html  index.html  manage-actions.html  no-actions.html  page-turner.html  remote-control.html  setup-options.html  setup.html  troubleshooting.html  voice-activation.html
src/frontend/js/: arbitrary-input.js  auto-turner.js  lib.js  record-action.js
src/frontend/styles/: main.css
src/kobo_config/: config.rs  mod.rs
src/logging/: mod.rs  syslog.rs
src/www/: index.html
src/www/cgi-bin/: delete-action.cgi  developer-settings.cgi  disable-debug.cgi  get-log.cgi  index.cgi  manage-actions.cgi  probe-inputs.cgi  record-action.cgi  record-input.cgi  remote-control.cgi  set-input-device.cgi  toggle-input-method.cgi  toggle-setting.cgi  toggle-wifi.cgi
src/www/cgi-bin/lib/: httpd-log  output-html  urlencode
src/www/create-action/: index.html
src/www/custom-actions/: index.html
src/www/js/: alert-recording.js  colored-buttons.js
src/www/page-turner/: index.html
src/www/setup/: index.html
src/www/styles/: main.css  remote.css
src/www/troubleshooting/: index.html
templates/: custom-actions.html  index.html  remote-control.html  setup.html
wifiremote.koplugin/: _meta.lua  main.lua
