[package]
name = "kobo-wifi-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
evdev-rs = { version = "0.6.1", features = ["serde"] }
framebuffer = "0.3.1"
keyboard-types = "0.7.0"
nix = { version = "0.27.1", features = ["fs"] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_with = { version = "3.5.1", features = ["chrono"] }
slug = "0.1.5"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = 3
strip = true
