[package]
name = "kobo-wifi-remote"
version = "0.3.1"
edition = "2021"
authors = ["sublipri"]
license = "GPL-3.0-only"
description = "A web-based remote control for Kobo e-readers"
repository = "https://github.com/sublipri/kobo-wifi-remote"
keywords = ["e-reader", "kobo"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["serde", "with-axum", "mime"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros", "ws"] }
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
evdev-rs = { version = "0.6.1", features = ["serde"] }
fbink-rs = { git = "https://github.com/sublipri/fbink-rs", features = ["serde"], rev = "9339be999a923d207a10f8e8255efe3d989ed596" }
figment = { version = "0.10.14", features = ["env", "toml"] }
flate2 = "1.0.28"
framebuffer = "0.3.1"
ini-roundtrip = "0.1.3"
keyboard-types = "0.7.0"
nix = { version = "0.27.1", features = ["fs", "process", "signal"] }
num_enum = "0.7.3"
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.113"
serde_with = { version = "3.5.1", features = ["chrono"] }
slug = "0.1.5"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.10"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["normalize-path", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
strip = true

[profile.release-minsized]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = "fat"
strip = true
